--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -1,10 +1,11 @@
-- id: Ghost
+- id: Willian Mesko
   avatar: avatars/ghost.png
   bio: The professional publishing platform
   twitter: TryGhost
   facebook: ghost
   website: https://ghost.org/
   location: On a plane
+  profile_image: img/avatar-autor.jpg
 - id: Another Author
   avatar: avatars/ghost.png
   bio: This is another test author with a profile background image
@@ -12,4 +13,4 @@
   facebook: ghost
   website: https://ghost.org/
   location: On a plane
-  profile_image: img/alex-knight-326705-unsplash.jpg
+  profile_image: img/avatar-autor.jpg
