--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -8,7 +8,7 @@
   profile_image: img/avatar-autor.jpg
 - id: Another Author
   avatar: avatars/ghost.png
-  bio: This is another test author with a profile background image
+  bio: Outro autor
   twitter: TryGhost
   facebook: ghost
   website: https://ghost.org/
